parser/src/parser/snapshots/parser__parser__parser__tests__parse_bool_op-3.snap
---
source: parser/src/parser/parser.rs
description: a or b or c
---
Module {
    node: Node {
        start: 0,
        end: 11,
    },
    body: [
        ExpressionStatement(
            BoolOp(
                BoolOperation {
                    node: Node {
                        start: 0,
                        end: 11,
                    },
                    op: Or,
                    values: [
                        Name(
                            Name {
                                node: Node {
                                    start: 0,
                                    end: 1,
                                },
                                id: "a",
                            },
                        ),
                        BoolOp(
                            BoolOperation {
                                node: Node {
                                    start: 5,
                                    end: 11,
                                },
                                op: Or,
                                values: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 5,
                                                end: 6,
                                            },
                                            id: "b",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 10,
                                                end: 11,
                                            },
                                            id: "c",
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
