parser/src/parser/snapshots/parser__parser__parser__tests__parse_call-3.snap
---
source: parser/src/parser/parser.rs
description: "a(b, c)"
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        ExpressionStatement(
            Call(
                Call {
                    node: Node {
                        start: 0,
                        end: 7,
                    },
                    func: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    args: [
                        Name(
                            Name {
                                node: Node {
                                    start: 2,
                                    end: 3,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 5,
                                    end: 6,
                                },
                                id: "c",
                            },
                        ),
                    ],
                    keywords: [],
                    starargs: None,
                    kwargs: None,
                },
            ),
        ),
    ],
}
