parser/src/parser/snapshots/parser__parser__parser__tests__parse_import_statement-7.snap
---
source: parser/src/parser/parser.rs
description: from a import b as c
---
Module {
    node: Node {
        start: 0,
        end: 20,
    },
    body: [
        ImportFrom(
            ImportFrom {
                node: Node {
                    start: 0,
                    end: 20,
                },
                module: "a",
                names: [
                    Alias {
                        node: Node {
                            start: 14,
                            end: 20,
                        },
                        name: "b",
                        asname: Some(
                            "c",
                        ),
                    },
                ],
                level: 0,
            },
        ),
    ],
}
