parser/src/parser/snapshots/parser__parser__parser__tests__parse_unary_op-4.snap
---
source: parser/src/parser/parser.rs
description: "-a"
---
Module {
    node: Node {
        start: 0,
        end: 2,
    },
    body: [
        ExpressionStatement(
            UnaryOp(
                UnaryOperation {
                    node: Node {
                        start: 0,
                        end: 2,
                    },
                    op: USub,
                    operand: Name(
                        Name {
                            node: Node {
                                start: 1,
                                end: 2,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
